# IrredenEngine

./: .bazelrc  .clang-format  .clang-tidy  .editorconfig  .gitattributes  .gitignore  .luarc.json  AGENTS.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  IrredenEngine-Irreden.code-workspace  LICENSE  MODULE.bazel  README.md  TASKS.md  WIP.md  open_profiler.ps1  open_profiler_macos.sh  ruff.toml
cmake/lua_codegen/: CMakeLists.txt  main.cpp  system_dsl.cpp  system_dsl.hpp
creations/: CLAUDE.md  CMakeLists.txt  CMakelists.txt
creations/bazel_test/: BUILD.bazel  main.cpp
creations/default/: CMakeLists.txt  main.cpp  world.cpp  world.hpp
creations/demos/: CLAUDE.md
creations/demos/analytic_oracle/: CMakeLists.txt  main.cpp
creations/demos/audio_playback/: CMakeLists.txt  config.lua  main.cpp
creations/demos/canvas_stress/: CMakeLists.txt  config.lua  main.cpp
creations/demos/chunk_streaming_smoke/: CMakeLists.txt  config.lua  main.cpp
creations/demos/collision_overlap_demo/: CMakeLists.txt  config.lua  main.lua  main_lua.cpp
creations/demos/day_cycle/: CMakeLists.txt  main.cpp
creations/demos/default/: CMakeLists.txt  commands.lua  config.lua  lua_bindings.cpp  main.cpp  (+4 more)
creations/grower/: CMakeLists.txt  main.cpp
creations/midi_device/: main.cpp
creations/template/: CMakeLists.txt  main.cpp
engine/: CLAUDE.md  CMakeLists.txt  engine.cpp  ir_args.cpp
engine/CMakeScripts/: ir_functions.cmake
engine/asset/: CLAUDE.md  CMakeLists.txt
engine/assets/: CMakeLists.txt
engine/audio/: BUILD.bazel  CLAUDE.md  CMakeLists.txt
engine/command/: CLAUDE.md  CMakeLists.txt
engine/common/: CLAUDE.md  CMakeLists.txt
engine/ecs/: CMakeLists.txt  ideas.md
engine/entity/: BUILD.bazel  CLAUDE.md  CMakeLists.txt  ideas.md
engine/input/: CLAUDE.md  CMakeLists.txt
engine/job/: CLAUDE.md  CMakeLists.txt
engine/math/: BUILD.bazel  CLAUDE.md  CMakeLists.txt
engine/patches/: ir_rtaudio.patch
engine/prefabs/: CLAUDE.md
engine/profile/: BUILD  CLAUDE.md  CMakeLists.txt  custom_build_cmake.sh
engine/profiling/: CMakeLists.txt
engine/render/: CLAUDE.md  CMakeLists.txt  texture.cpp
engine/rendering/: CMakeLists.txt
engine/script/: CLAUDE.md  CMakeLists.txt
engine/scripting/: CMakeLists.txt
engine/system/: CLAUDE.md  CMakeLists.txt
engine/systems/: notes.md
engine/time/: CLAUDE.md  CMakeLists.txt
engine/tools/: README.md  concurrency.toml
engine/update/: CMakeLists.txt
engine/utility/: CLAUDE.md  CMakeLists.txt
engine/video/: CLAUDE.md  CMakeLists.txt
engine/window/: CLAUDE.md  CMakeLists.txt
engine/world/: CLAUDE.md  CMakeLists.txt
test/: CLAUDE.md  CMakeLists.txt
test/asset/: binary_io_test.cpp  json_sidecar_test.cpp  key_value_store_test.cpp  name_table_test.cpp  rig_format_test.cpp  sprite_sheet_test.cpp  txl_sidecar_test.cpp  voxel_set_dense_test.cpp  voxel_set_hybrid_test.cpp  voxel_set_rle_test.cpp  voxel_set_shapes_test.cpp
test/audio/: audio_playback_test.cpp  midi_multiport_test.cpp  music_theory_test.cpp
test/common/: ir_args_test.cpp  ir_platform_test.cpp
test/ecs/: command_randomize_voxels_test.cpp  entity_manager_test.cpp  execute_query_test.cpp  grid_rotation_test.cpp  hitbox_2d_gui_test.cpp  ir_entity_test.cpp  joint_matrix_upload_test.cpp  modifier_quat_runtime_test.cpp  modifier_runtime_test.cpp  modifier_types_test.cpp  modifier_vec3_runtime_test.cpp  parallel_spawn_test.cpp  propagate_transform_test.cpp  rotation_target_test.cpp  skeleton_components_test.cpp  skeleton_skinning_test.cpp  skinning_pipeline_consistency_test.cpp  sort_archetype_relational_test.cpp  spatial_grid_test.cpp  store_tie_signal_test.cpp  system_exclude_test.cpp  voxel_bone_slot_seed_test.cpp  voxel_set_edit_api_test.cpp  voxel_set_target_canvas_test.cpp
test/job/: ir_job_test.cpp  ir_jobs_test.cpp
test/math/: camera_subpixel_test.cpp  ir_math_color_layout_test.cpp  ir_math_coord_helpers_test.cpp  ir_math_easing_color_sort_test.cpp  ir_math_random_misc_test.cpp  ir_math_test.cpp  ir_math_trixel_index_test.cpp  ir_math_viewport_helpers_test.cpp  ir_math_wrap_test.cpp  ir_math_yaw_deformation_test.cpp  physics_test.cpp  sdf_test.cpp
test/render/: camera_yaw_test.cpp  detached_world_depth_test.cpp  frame_data_sun_layout_test.cpp  gpu_compute_dispatch_test.cpp  light_volume_test.cpp  per_axis_canvas_size_test.cpp  per_canvas_light_scope_test.cpp  picking_face_normal_test.cpp  sprite_animation_test.cpp  sprite_components_test.cpp  sprite_render_test.cpp  sun_direction_test.cpp  sun_lighting_test.cpp
test/script/: lua_audio_midi_observer_test.cpp  lua_collision_bindings_test.cpp  lua_command_test.cpp  lua_component_codegen_fixtures.lua  lua_component_codegen_overflow_fixture.lua  lua_component_codegen_test.cpp  lua_component_register_test.cpp  lua_deferred_entity_test.cpp  lua_enum_codegen_error_fixture.lua  lua_enum_register_test.cpp  lua_input_bindings_test.cpp  lua_local_transform_lua_test.cpp  lua_persistence_test.cpp  lua_pipeline_register_test.cpp  lua_render_bindings_test.cpp  lua_rotation_target_lua_test.cpp  lua_system_codegen_fixtures.lua  lua_system_codegen_test.cpp  lua_system_coexistence_fixtures.lua  lua_system_coexistence_test.cpp  lua_system_register_test.cpp  lua_world_snapshot_test.cpp  modifier_lua_test.cpp  prefab_api_test.cpp
test/system/: pipeline_groups_test.cpp  register_system_test.cpp  system_access_test.cpp  system_cadence_test.cpp  system_concurrency_test.cpp
test/time/: cycle_test.cpp  lua_sim_test.cpp  sim_clock_test.cpp  stopwatch_test.cpp  timer_test.cpp
test/tools/: calibration_test.sh  concurrency_test.sh  ir_run_exit_code_test.sh  normalization_test.sh
test/utility/: ir_utility_test.cpp
test/world/: chunk_coord_test.cpp  chunk_membership_migration_test.cpp  chunk_persistence_test.cpp  chunk_residency_manager_test.cpp  component_migration_test.cpp  persist_round_trip_test.cpp  save_trait_test.cpp  voxel_set_serialize_test.cpp  world_snapshot_relations_test.cpp  world_snapshot_test.cpp
toolchain/: BUILD.bazel  cc_toolchain_config.bzl
your-implementation-here/: CMakeLists.txt  main.cpp
(+2058 files in other folders)
