
module(
    name = "irengine",
    version = "1.0",
    compatibility_level = 1,
)
bazel_dep(name = "rules_foreign_cc", version = "0.12.0")
bazel_dep(name = "platforms", version = "0.0.10")
bazel_dep(name = "bazel_features", version = "1.20.0")

host_platform = "@platforms//os:macos_arm64"

http_archive = use_repo_rule(
    "@bazel_tools//tools/build_defs/repo:http.bzl",
    "http_archive"
)
rules_foreign_cc_ext = use_extension(
    "@rules_foreign_cc//foreign_cc:extensions.bzl",
    "rules_foreign_cc_dependencies",
)

use_repo(rules_foreign_cc_ext, "rules_foreign_cc_dependencies")

use_extension("@rules_foreign_cc//foreign_cc:repositories.bzl", "rules_foreign_cc_dependencies")

# Use the extension for additional setup if needed
bazel_features_ext = use_extension("@bazel_features//:deps.bzl", "bazel_features_deps")
use_repo(bazel_features_ext, "bazel_features_deps")

# BEGIN trying to add custom toolchain------------------------

# register_toolchains(
#     "//toolchain:cc_toolchain_for_macos"
# )
# rules_foreign_cc_ext.rules_foreign_cc_dependencies(
#     register_default_tools = False,
#     register_built_tools = False,
# )
# Declare the rules_foreign_cc dependency

# END trying to add custom toolchain------------------------


# cmake build file templates
_ALL_CONTENT = """
filegroup(
    name = "all_srcs",
    srcs = glob(["**"]),
    visibility = ["//visibility:public"],
)
"""

# Engine depencies


# IRAutio
# RtAudio
http_archive(
    name = "rtaudio",
    build_file_content = _ALL_CONTENT,
    urls = ["https://github.com/thestk/rtaudio/archive/refs/tags/6.0.1.zip"],
    strip_prefix = "rtaudio-6.0.1",
    sha256 = "ac27dfbfa764441b2b14a7180861d044d944189b5d792cb231fbffc540220fc5",
)

# RtMidi
http_archive(
    name = "rtmidi",
    build_file_content = _ALL_CONTENT,
    urls = ["https://github.com/thestk/rtmidi/archive/refs/tags/6.0.0.zip"],
    strip_prefix = "rtmidi-6.0.0",
    sha256 = "55f1e7636160204a8b04dc7aacf959b7c66df0011124e7ddfa6d9c06c8b3363e",
)


# GLFW
# GLM
http_archive(
    name = "glm",
    build_file_content = _ALL_CONTENT,
    urls = ["https://github.com/g-truc/glm/archive/refs/tags/1.0.1.zip"],
    strip_prefix = "glm-1.0.1",
    sha256 = "09c5716296787e1f7fcb87b1cbdbf26814ec1288ed6259ccd30d5d9795809fa5",
)

# IRProfile
http_archive(
    name = "easy_profiler",
    build_file_content = _ALL_CONTENT,
    urls = ["https://github.com/yse/easy_profiler/archive/refs/tags/v2.1.0.zip"],
    strip_prefix = "easy_profiler-2.1.0",
    sha256 = "15c1569550fd4afbcdf0780f7bc71c5457c51fff16d39fbafb66d1254a7e5502",
)
bazel_dep(name = "spdlog", version = "1.14.1")

#IRRender
# Glad 
# OpenGL/glsl
# StbImage
# MeshOptimizer
# Assimp
# Lua
# FFMpeg