
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/demos/default)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/demos/midi_keyboard)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/demos/metal_clear_test)
# add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/hana_class_projects)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/demos/lighting)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/demos/shape_debug)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/demos/modifier_demo)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/demos/perf_grid)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/demos/sprite_demo)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/demos/lua_pipeline_demo)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/demos/z_yaw_rotation)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/demos/ui_widgets)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/demos/lua_perf_grid)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/demos/gpu_particles)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/editors/font_maker)
