
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/demos/default)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/demos/midi_keyboard)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/demos/metal_clear_test)
# add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/hana_class_projects)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/demos/lighting)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/demos/shape_debug)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/demos/analytic_oracle)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/demos/modifier_demo)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/demos/perf_grid)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/demos/sprite_demo)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/demos/lua_pipeline_demo)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/demos/z_yaw_rotation)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/demos/ui_widgets)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/demos/lua_perf_grid)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/demos/gpu_particles)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/demos/ui_dockspace)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/demos/stateless_particles)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/demos/canvas_stress)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/demos/lowres_pan)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/demos/chunk_streaming_smoke)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/demos/day_cycle)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/demos/ir_voxel_yaw)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/demos/skeletal_demo)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/demos/audio_playback)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/demos/fog_demo)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/demos/collision_overlap_demo)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/demos/lua_widgets)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/demos/scene_reset)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/demos/random_voxels)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/demos/persist_roundtrip)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/editors/font_maker)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/editors/voxel_editor)
