# add_library(IrredenEngineAssets STATIC
#     irreden/update/components/component_acceleration_3d.hpp
#     irreden/update/components/component_lifetime.hpp
#     irreden/update/components/component_velocity_3d.hpp
# )

# target_link_libraries(IrredenEngineAssets PUBLIC
#     IrredenEngineMath
# )

# target_include_directories(
#     IrredenEngineAssets PUBLIC
#     ${CMAKE_CURRENT_SOURCE_DIR}
# )